Set up html template for user management on admin panel.

--- a/app/views/admin_panel/show.html.erb
+++ b/app/views/admin_panel/show.html.erb
@@ -15,4 +15,51 @@
             </form>
         </div>
     </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">User Managment</div>
+        <div class="panel-body">
+            <uib-tabset>
+                <uib-tab heading="Partner Accounts">
+                    <table class="table table-striped">
+                        <thead><tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Edit Info</th>
+                            <th>Delete Account</th>
+                            <th>Give Admin Access</th>
+                        </tr></thead>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </uib-tab>
+                <uib-tab heading="Admin Accounts">
+                    <table class="table table-striped">
+                        <thead><tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Edit Info</th>
+                            <th>Delete Account</th>
+                            <th>Rescind Admin Access</th>
+                        </tr></thead>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </uib-tab>
+            </uib-tabset>
+        </div>
+    </div>
 </div>
