--- a/app/views/partials/_additional.html.erb
+++ b/app/views/partials/_additional.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="additional">Please provide any additional informaton you'd like to include:</label>
       <div class="col-sm-10"> 
-        <textarea type="text" class="form-control" rows="7" name="additional" maxlength="150" placeholder="Enter additional information"></textarea>
+        <textarea type="text" class="form-control" rows="7" name="additional" maxlength="150" placeholder="Enter additional information" <% if @loi_form.created_at %>readonly> <% end %><%= @loi_form.additional %> </textarea>
       </div>
     </div>
 
