disabling fields for show page

--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -99,6 +99,7 @@
 </div>
 
 <form class="form-horizontal" role="form">
+    <fieldset disabled="disabled">
     <!-- section 1 -->
 <%= render partial: "partials/contact_info" %>
 
@@ -135,4 +136,5 @@
 
 <!-- section 10 -->
 <%= render partial: "partials/geographical" %>
+    </fieldset>
 </form>
