added value of @loi_form to inputs in partials so that loi show and rendering of unsaved invalidated form shows user input

--- a/app/views/partials/_challenges_marketing.html.erb
+++ b/app/views/partials/_challenges_marketing.html.erb
@@ -1,27 +1,27 @@
 <div class="row">
   <div class="well col-md-9"><h4>Marketing</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="actual_staff_marketing" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_marketing" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_marketing %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="current_staff_marketing" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_marketing" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_marketing %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="projected_staff_marketing" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_marketing" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_marketing %>">
   </div>
   <br>
 </div>
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="marketing_challenge_1" placeholder="1. Enter a marketing challenge">
+    <input type="text" class="form-control" name="marketing_challenge_1" placeholder="1. Enter a marketing challenge" value="<%= @loi_form.marketing_challenge_1 %>">
   </div>
   <div class="col-md-2">
     <select name="marketing_1_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.marketing_1_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.marketing_1_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.marketing_1_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div>
@@ -29,14 +29,14 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="marketing_challenge_2" placeholder="2. Enter a marketing challenge">
+    <input type="text" class="form-control" name="marketing_challenge_2" placeholder="2. Enter a marketing challenge" value="<%= @loi_form.marketing_challenge_2 %>">
   </div>
   <div class="col-md-2">
     <select name="marketing_2_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.marketing_2_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.marketing_2_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.marketing_2_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div> 
@@ -44,14 +44,14 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="marketing_challenge_3" placeholder="3. Enter a marketing challenge">
+    <input type="text" class="form-control" name="marketing_challenge_3" placeholder="3. Enter a marketing challenge" value="<%= @loi_form.marketing_challenge_3 %>">
   </div>
   <div class="col-md-2">
     <select name="marketing_3_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.marketing_3_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.marketing_3_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.marketing_3_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div>
