--- a/app/views/partials/_challenges_fund.html.erb
+++ b/app/views/partials/_challenges_fund.html.erb
@@ -1,27 +1,27 @@
 <div class="row">
   <div class="well col-md-9"><h4>Fund Development</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="actual_staff_fund" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_fund" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_fund %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="current_staff_fund" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_fund" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_fund %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="projected_staff_fund" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_fund" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_fund %>">
   </div>
   <br>
 </div>
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="fund_challenge_1" placeholder="1. Enter a fund development challenge">
+    <input type="text" class="form-control" name="fund_challenge_1" placeholder="1. Enter a fund development challenge" value="<%= @loi_form.fund_challenge_1 %>">
   </div>
   <div class="col-md-2">
     <select name="fund_1_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.fund_1_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.fund_1_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.fund_1_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
   <br>
@@ -30,14 +30,14 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="fund_challenge_2" placeholder="2. Enter a fund development challenge">
+    <input type="text" class="form-control" name="fund_challenge_2" placeholder="2. Enter a fund development challenge" value="<%= @loi_form.fund_challenge_2 %>">
   </div>
   <div class="col-md-2">
     <select name="fund_2_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.fund_2_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.fund_2_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.fund_2_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div> 
@@ -45,14 +45,14 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="fund_challenge_3" placeholder="3. Enter a fund development challenge">
+    <input type="text" class="form-control" name="fund_challenge_3" placeholder="3. Enter a fund development challenge" value="<%= @loi_form.fund_challenge_3 %>">
   </div>
   <div class="col-md-2">
     <select name="fund_3_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.fund_3_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.fund_3_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.fund_3_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div>
