--- a/app/views/partials/_challenges_strategic.html.erb
+++ b/app/views/partials/_challenges_strategic.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="well col-md-9"><h4>Strategic Planning</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="actual_staff_strategic" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_strategic" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_strategic %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="current_staff_strategic" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_strategic" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_strategic %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="projected_staff_strategic" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_strategic" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_strategic %>">
   </div>
   <br>
 </div>
@@ -15,14 +15,14 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="strategic_challenge_1" placeholder="1. Enter a strategic planning challenge">
+    <input type="text" class="form-control" name="strategic_challenge_1" placeholder="1. Enter a strategic planning challenge" value="<%= @loi_form.strategic_challenge_1 %>">
   </div>
   <div class="col-md-2">
     <select name="strategic_1_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.strategic_1_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.strategic_1_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.strategic_1_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div>
@@ -30,14 +30,14 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="strategic_challenge_2" placeholder="2. Enter a strategic planning challenge">
+    <input type="text" class="form-control" name="strategic_challenge_2" placeholder="2. Enter a strategic planning challenge" value="<%= @loi_form.strategic_challenge_2 %>">
   </div>
   <div class="col-md-2">
     <select name="strategic_2_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.strategic_2_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.strategic_2_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.strategic_2_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div> 
@@ -45,14 +45,14 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" name="strategic_challenge_3" placeholder="3. Enter a strategic planning challenge">
+    <input type="text" class="form-control" name="strategic_challenge_3" placeholder="3. Enter a strategic planning challenge" value="<%= @loi_form.strategic_challenge_3 %>">
   </div>
   <div class="col-md-2">
     <select name="strategic_3_priority" class="form-control">
       <option value="">Select priority</option>
-      <option value="high">High</option>
-      <option value="medium">Medium</option>
-      <option value="low">Low</option>
+      <option <% if @loi_form.strategic_3_priority == "high" %>selected <% end %>value="high">High</option>
+      <option <% if @loi_form.strategic_3_priority == "medium" %>selected <% end %>value="medium">Medium</option>
+      <option <% if @loi_form.strategic_3_priority == "low" %>selected <% end %>value="low">Low</option>
     </select>
   </div>
 </div>
