--- a/app/views/partials/_geographical.html.erb
+++ b/app/views/partials/_geographical.html.erb
@@ -3,14 +3,14 @@
   <div class="col-md-5">
     <select name="geo_focus" class="form-control">
       <option value="">Select geographic focus</option>
-      <option value="city">City of Chicago</option>
-      <option value="land">Chicagoland</option>
-      <option value="beyond">Chicago and Beyond</option>
-      <option value="specific">Neighborhood/Area Specific</option>
+      <option value="city"<% if @loi_form.geo_focus == "city" %> selected<% end %>>City of Chicago</option>
+      <option value="land"<% if @loi_form.geo_focus == "land" %> selected<% end %>>Chicagoland</option>
+      <option value="beyond"<% if @loi_form.geo_focus == "beyond" %> selected<% end %>>Chicago and Beyond</option>
+      <option value="specific"<% if @loi_form.geo_focus == "specific" %> selected<% end %>>Neighborhood/Area Specific</option>
     </select>
   </div>
   <div class="col-md-5">
-    <input class="form-control" type="text" name="other_geo_focus" placeholder="(If Neightborhood/Area, please specify)">
+    <input class="form-control" type="text" name="other_geo_focus" placeholder="(If Neightborhood/Area, please specify)" value="<%= @loi_form.other_geo_focus %>">
   </div>
 </div>
 <hr>
