--- a/app/views/partials/_organization.html.erb
+++ b/app/views/partials/_organization.html.erb
@@ -31,7 +31,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="affiliated">If affiliated with a national or parent organization, what role does the organization play in your strategic direction, operations, and overall governance?</label>
       <div class="col-sm-10"> 
-        <textarea type="text" class="form-control" rows="7" name="affiliated" maxlength="150" placeholder="Role of Affiliations: limit to 150 characters."><%= @loi_form.affiliated %></textarea>
+        <textarea type="text" class="form-control" rows="7" name="affiliated" placeholder="Role of Affiliations: please limit to 50 words."><%= @loi_form.affiliated %></textarea>
       </div>
     </div>
 <hr>
