added total fte section to loi form and show, added columns to loi form model

--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -124,6 +124,7 @@
 <%= render partial: "partials/challenges_strategic" %>
 <%= render partial: "partials/challenges_technology" %>
 <%= render partial: "partials/challenges_other" %>
+<%= render partial: "partials/total_fte_count" %>
 
 <!-- additional comments section 7 -->
 <%= render partial: "partials/additional" %>
