--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -33,6 +33,8 @@
 <%= render partial: "partials/challenges_strategic" %>
 <%= render partial: "partials/challenges_technology" %>
 <%= render partial: "partials/challenges_other" %>
+<%= render partial: "partials/total_fte_count" %>
+
 
 <!-- additional comments section 7 -->
 <%= render partial: "partials/additional" %>
