--- a/app/assets/stylesheets/nonprofits.scss
+++ b/app/assets/stylesheets/nonprofits.scss
@@ -7,5 +7,13 @@
 }
 
 .padded {
-  padding: 10px;
+  padding: 30px;
 }
+
+p {
+  line-height: 2.5 em;
+}
+
+body {
+  font-family: Candara,Calibri,Segoe,"Segoe UI",Optima,Arial,sans-serif;
+}                                                                                    
