--- a/app/views/nonprofits/home.html.erb
+++ b/app/views/nonprofits/home.html.erb
@@ -1,16 +1,14 @@
 <% if user_signed_in? %>
   <p class="pull-right"><a href="/loi_forms">View Submitted LOI Forms</a></p>
 <% end %>
-<h1>Welcome to SVP Chicago!</h1>
+<h1><strong>Welcome to SVP Chicago</strong></h1>
 
-<p>Social Venture Partners Chicago invests time, expertise and money in innovative nonprofits that have the potential to make meaningful and sustainable improvements within the Chicagoland community.</p>
-<p>We are investors, entrepreneurs, business professionals, attorneys, educators, and philanthropists who believe that, as a network, we can help solve problems and help strengthen our community.</p>
+<p>Social Venture Partners Chicago (SVP Chicago) is a group of like-minded individuals taking a venture capital approach to funding and growing innovative nonprofits. Our partners are successful entrepreneurs, corporate executives and professionals skilled at growing organizations who also share a desire to improve the lives of people in our community.</p>
 
-<h2>Social Venture Partners Chicago</h2>
-<h2>2015 Letter of Interest Form</h2>
-<h2><i>Sector Focus: Breaking the Cycle of Poverty</i></h2>
 
-<p>Social Venture Partners Chicago seeks to invest our time, expertise, and funds over the next 3 years in a non-profit organization that is working to address breaking the cycle of poverty in the Chicagoland area.  We are especially interested in organizations with strong leaders and that are at an inflection point in their organizational lifecycle. Our aim is to partner with the selected organization to actively work to increase the capacity and scale of the organization, thereby measurably increasing the impact of their programs and services.</p>
+<h1><strong>Sector Focus: Breaking the Cycle of Poverty</strong></h1>
+
+<p>Social Venture Partners Chicago seeks to invest our time, expertise, and funds over the next three years in a non-profit organization that is working to address breaking the cycle of poverty in the Chicagoland area.  We are especially interested in organizations with strong leaders and that are at an inflection point in their organizational lifecycle. Our aim is to partner with the selected organization to actively work to increase the capacity and scale of the organization, thereby measurably increasing the impact of their programs and services.</p>
 <p>We encourage your organization to submit <%= link_to "this Letter of Interest", "/letter_of_interest" %> if:</p>
 <ul>
   <li>Your organization’s primary focus is to address the cycle of poverty in Chicagoland.</li>
@@ -19,6 +17,8 @@
   <li>Your budget is greater than $250,000 but less than $5,000,000.</li>
   <li>Your staff and board desire growth and hands-on assistance in building your organizational capacity in areas such as Strategic Planning, Board Development/Governance, Fund Development, Business Operations (including Accounting/Finance), Marketing, and Technology. </li>
 </ul>
+
+<p>Community-based and grass roots organizations are encouraged to apply. Please note that foundations, governmental entities, and religious organizations are not appropriate for partnership with us to build lasting organizational capacity and will not be considered for our investment</p>
 
 <p><%= link_to "Letter of Interest Form", "/letter_of_interest" %>
 </p>
