--- a/app/views/partials/_demographics.html.erb
+++ b/app/views/partials/_demographics.html.erb
@@ -3,37 +3,37 @@
 <h4>Please select the sectors that your programs address:</h4>
 <div class="padded">
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="addiction"<% if @loi_form.sectors.include? "addiction"%> checked<% end %>>Alcoholism &amp; Addiction</label>
+    <label><input type="checkbox" name="sectors[]" value="addiction" <% if @loi_form.sectors %> <% if @loi_form.sectors.include? "addiction"%> checked<% end %><% end %>>Alcoholism &amp; Addiction</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="education"<% if @loi_form.sectors.include? "education" %> checked<% end %>>Education</label>
+    <label><input type="checkbox" name="sectors[]" value="education"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "education" %> checked<% end %><% end %>>Education</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="elderly"<% if @loi_form.sectors.include? "elderly" %> checked<% end %>>Elderly Care</label>
+    <label><input type="checkbox" name="sectors[]" value="elderly"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "elderly" %> checked<% end %><% end %>>Elderly Care</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="food"<% if @loi_form.sectors.include? "food" %> checked<% end %>>Food</label>
+    <label><input type="checkbox" name="sectors[]" value="food"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "food" %> checked<% end %><% end %>>Food</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="health"<% if @loi_form.sectors.include? "health" %> checked<% end %>>Health &amp; Medical</label>
+    <label><input type="checkbox" name="sectors[]" value="health"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "health" %> checked<% end %><% end %>>Health &amp; Medical</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="homeless"<% if @loi_form.sectors.include? "homeless" %> checked<% end %>>Homelessness</label>
+    <label><input type="checkbox" name="sectors[]" value="homeless"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "homeless" %> checked<% end %><% end %>>Homelessness</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="jobs"<% if @loi_form.sectors.include? "jobs" %> checked<% end %>>Jobs Programs</label>
+    <label><input type="checkbox" name="sectors[]" value="jobs"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "jobs" %> checked<% end %><% end %>>Jobs Programs</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="mental"<% if @loi_form.sectors.include? "mental" %> checked<% end %>>Mental Health</label>
+    <label><input type="checkbox" name="sectors[]" value="mental"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "mental" %> checked<% end %><% end %>>Mental Health</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="parent"<% if @loi_form.sectors.include? "parent" %> checked<% end %>>Pregnancy &amp; Parenting</label>
+    <label><input type="checkbox" name="sectors[]" value="parent"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "parent" %> checked<% end %><% end %>>Pregnancy &amp; Parenting</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="violence"<% if @loi_form.sectors.include? "violence" %> checked<% end %>>Violence &amp; Abuse</label>
+    <label><input type="checkbox" name="sectors[]" value="violence"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "violence" %> checked<% end %><% end %>>Violence &amp; Abuse</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" name="sectors[]" value="other"<% if @loi_form.sectors.include? "other" %> checked<% end %>>Other</label>
+    <label><input type="checkbox" name="sectors[]" value="other"<% if @loi_form.sectors %> <% if @loi_form.sectors.include? "other" %> checked<% end %><% end %>>Other</label>
     <!-- Why doesn't other_sectors show up in new form if redirected back after invalid submission? Works in show-->
     <label for="other_sectors"><input type="text" id="other_sectors" placeholder="(Please specify)" value="<%= @loi_form.other_sectors %>"></label>
   </div>
